# AMLCrypto

./: .env.db.template  .env.shared.template  .gitignore  README.md  pyproject.toml
api_service/: .env.template  Dockerfile  main.py  pyproject.toml
api_service/alembic/: env.py
api_service/alembic/versions/: 408e1c145975_add_transactions.py  a664a1da91a9_alt_value_and_fee_to_string_because_of_.py
api_service/core/: cache_serializer.py  celery.py  container.py  database.py  environment.py  exception_handlers.py  repositories.py  schemas.py  uow.py
api_service/tests/: test_repositories.py  test_services.py
api_service/transactions/: mappers.py  models.py  repositories.py  router.py  schemas.py  services.py
dev_tools/: docker-compose.yml
etl_service/: .env.template  Dockerfile  main.py  pyproject.toml
etl_service/core/: environment.py
etl_service/schemas/: dump_schemas.py  transaction_schemas.py
etl_service/services/: dumper.py  message_broker.py  transaction_observer.py
startup_scripts/: entrypoint.sh
transaction_consumer_service/: .env.template  Dockerfile  main.py  pyproject.toml  services.py
transaction_consumer_service/core/: logger.py
tx_consumer_service/: .env.template  consumer.py  main.py  mappers.py  models.py  pyproject.toml  repositories.py  schemas.py  services.py
tx_consumer_service/core/: database.py  environment.py  logger.py
