[tool.poetry]
name = "amlcrypto"
version = "0.1.0"
description = "Test task from amlcrypto for an interview"
authors = ["FourZd <shogo.ryaskov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
dependency-injector = "^4.44.0"
alembic = "^1.14.0"
pydantic-settings = "^2.7.0"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
web3 = "^7.6.1"
pydantic = "^2.10.4"
aiohttp = "^3.11.11"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
aiocache = "^0.12.3"
redis = "^5.2.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pandas = "^2.2.3"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
