[tool.poetry]
name = "etl-service"
version = "0.1.0"
description = "Etl microservice for parsing tx data from dumps & realtime from blockchains"
authors = ["FourZd <shogo.ryaskov@gmail.com>"]
readme = "README.md"
packages = [{include = "etl_service"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pika = "^1.3.2"
requests = "^2.32.3"
aiohttp = "^3.11.11"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
